--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "parallelshell \"ng build\" \"npm run watch\" ",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "watch": "npm-watch",
+    "ng-build": "ng build -w"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +45,9 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "npm-watch": "^0.1.8",
+    "parallelshell": "^2.0.0",
+    "copyfiles": "^1.2.0"
   }
 }
