--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "parallelshell \"ng build\" \"npm run watch\" ",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "watch": "npm-watch",
-    "ng-build": "ng build -w"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -45,9 +43,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "npm-watch": "^0.1.8",
-    "parallelshell": "^2.0.0",
-    "copyfiles": "^1.2.0"
+    "typescript": "~3.2.2"
   }
 }
